# spl-token-2022-test-program

./: Anchor.toml  package.json
programs/token-2022-demo/: Cargo.toml
programs/token-2022-demo/src/: lib.rs
tests/: token-2022-demo.ts
